patching based on customer's case

--- a/modules/integration_azure-event-hub/conf/readme.yaml
+++ b/modules/integration_azure-event-hub/conf/readme.yaml
@@ -1,3 +1,15 @@
 documentations:
   - name: Azure Monitor metrics
     url: 'https://docs.microsoft.com/en-us/azure/azure-monitor/platform/metrics-supported'
+notes: |
+  ### About filtering
+
+  Unlike other Azure services, the tags defined by user on Event Hubs are not fetched by SignalFx Azure
+  integration as dimensions. This is why we cannot filter on [the azure tagging
+  convention](https://github.com/claranet/terraform-signalfx-detectors/wiki/Tagging-convention#azure).
+  In this case, you could have to leverage multiple instances of this module to monitor different Event Hubs providing
+  different value for this entity_name. Else, its default value * will monitor all Event Hubs.
+
+  ### About warning default values
+
+  Basic customer's case seems to report values beetween 0 and 5% in a nominal situation.
