--- a/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
+++ b/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
@@ -2,8 +2,8 @@
 ---
 module: "Azure Event Hub"
 name: "throttled requests"
-filtering: "filter('resource_type', 'Microsoft.EventHub/clusters') and filter('primary_aggregation_type', 'true')"
-aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
+filtering: "filter('resource_type', 'Microsoft.EventHub/namespaces') and filter('primary_aggregation_type', 'true')"
+aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region', 'entityname'])"
 transformation: ".min(over='15m')"
 value_unit: "%"
 signals:
@@ -22,7 +22,7 @@ rules:
     comparator: ">"
     dependency: critical
   warning:
-    threshold: 0
+    threshold: 5
     comparator: ">"
     dependency: major
 ...
