--- a/modules/integration_gcp-load-balancing/conf/readme.yaml
+++ b/modules/integration_gcp-load-balancing/conf/readme.yaml
@@ -1,3 +1,12 @@
 documentations:
   - name: Stackdriver metrics
     url: 'https://cloud.google.com/monitoring/api/metrics_gcp#gcp-loadbalancing'
+
+notes: |
+  ### Latency
+
+  When there is websocket going through your load balancer you may filter them:
+
+  ```
+  filter_custom_excludes = ["response_code:101"]
+  ```
