--- a/modules/integration_gcp-load-balancing/conf/readme.yaml
+++ b/modules/integration_gcp-load-balancing/conf/readme.yaml
@@ -1,3 +1,13 @@
 documentations:
   - name: Stackdriver metrics
     url: 'https://cloud.google.com/monitoring/api/metrics_gcp#gcp-loadbalancing'
+
+notes: |
+  ### Latency
+
+  When there is websocket going through your load balancer you will experiment very high and irrelevant latency.
+  To avoid false alerts, you may filter out them by using `101` http response code:
+
+  ```
+  filter_custom_excludes = ["response_code:101"]
+  ```
