--- a/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
+++ b/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
@@ -3,7 +3,7 @@
 module: "Azure Event Hub"
 name: "throttled requests"
 filtering: "filter('resource_type', 'Microsoft.EventHub/namespaces') and filter('primary_aggregation_type', 'true')"
-aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region', 'entityname'])"
+aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".min(over='15m')"
 value_unit: "%"
 signals:
