add hpa to extra metrics

--- a/modules/smart-agent_kubernetes-common/conf/readme.yaml
+++ b/modules/smart-agent_kubernetes-common/conf/readme.yaml
@@ -32,6 +32,8 @@ source_doc: |
   * `kubernetes.job.succeeded`
   * `kubernetes.stateful_set.ready`
   * `kubernetes.stateful_set.desired`
+  * `kubernetes.hpa.spec.max_replicas`
+  * `kubernetes.hpa.status.desired_replicas`
 
   ### Examples
 
@@ -46,6 +48,8 @@ source_doc: |
       - kubernetes.job.succeeded
       - kubernetes.stateful_set.ready
       - kubernetes.stateful_set.desired
+      - kubernetes.hpa.spec.max_replicas
+      - kubernetes.hpa.status.desired_replicas
   ```
 
   You can replace `kubernetes-cluster` with `openshift-cluster` you monitor Openshift Kubernetes.
@@ -105,9 +109,13 @@ source_doc: |
 
   # Required to use this module
   clusterExtraMetrics:
-    - kubernetes.job.failed
+    - kubernetes.job.completions
+    - kubernetes.job.active
+    - kubernetes.job.succeeded
     - kubernetes.stateful_set.ready
     - kubernetes.stateful_set.desired
+    - kubernetes.hpa.spec.max_replicas
+    - kubernetes.hpa.status.desired_replicas
 
   # Required to use "system-generic" module
   loadPerCPU: true
