Integration Azure Event Hub fixes (#275)
Co-authored-by: Nicolas VION <nicolas.vion@icloud.com>
Co-authored-by: Quentin Manfroi <2693213+xp-1000@users.noreply.github.com>
Co-authored-by: Quentin Manfroi <quentin.manfroi@fr.clara.net>

--- a/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
+++ b/modules/integration_azure-event-hub/conf/01-capacity-throttling.yaml
@@ -2,7 +2,7 @@
 ---
 module: "Azure Event Hub"
 name: "throttled requests"
-filtering: "filter('resource_type', 'Microsoft.EventHub/clusters') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.EventHub/namespaces') and filter('primary_aggregation_type', 'true')"
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 transformation: ".min(over='15m')"
 value_unit: "%"
@@ -22,7 +22,7 @@ rules:
     comparator: ">"
     dependency: critical
   warning:
-    threshold: 0
+    threshold: 5
     comparator: ">"
     dependency: major
 ...
