update markdown-link-check github action

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -83,7 +83,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run PySpelling
-      uses: sbates130272/spellcheck-github-actions@v0.7.0
+      uses: rojopolis/spellcheck-github-actions@0.14.0
 
   dead-links:
     needs: pre_job
