--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -32,11 +32,12 @@ jobs:
       uses: actions/checkout@v2
 
     - name: TOC Generator
-      uses: technote-space/toc-generator@v2.6.1
+      uses: technote-space/toc-generator@v4
       with:
         TARGET_PATHS: '.'
         TOC_TITLE: ':link: **Contents**'
         MAX_HEADER_LEVEL: 3
+        CREATE_PR: false
 
   modules:
     needs: pre_job
@@ -82,7 +83,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run PySpelling
-      uses: sbates130272/spellcheck-github-actions@v0.7.0
+      uses: rojopolis/spellcheck-github-actions@0.14.0
 
   dead-links:
     needs: pre_job
