--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -69,9 +69,9 @@ jobs:
 
     - name: Terraform Apply
       if: env.SFX_AUTH_TOKEN != null
-      run: echo yes | terraform -chdir=examples/stack apply -input=false -lock=false
+      run: echo yes | terraform -chdir=examples/stack apply -input=false -lock=false -refresh=false
 
     - name: Terraform Destroy
       if: always() && steps.destroy.outputs.enabled == '1' && env.SFX_AUTH_TOKEN != null
-      run: terraform -chdir=examples/stack destroy -input=false -lock=false
+      run: terraform -chdir=examples/stack destroy -input=false -lock=false -refresh=false
 
