--- a/modules/smart-agent_systemd-services/conf/readme.yaml
+++ b/modules/smart-agent_systemd-services/conf/readme.yaml
@@ -2,4 +2,19 @@ documentations:
   - name: Smart Agent monitor
     url: 'https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-systemd.html'
 
-source_doc:
+source_doc: |
+  ### Monitor
+  
+  The detector of this module is based on metrics reported by the [collectd/systemd](https://docs.signalfx.com/en/latest/integrations/agent/monitors/collectd-systemd.html) monitor.
+
+  For example, to monitor the `toto.service` and `titi.service` on your host, your SignalFX agent should look like this:
+
+  ```yaml
+  monitors:
+    …
+    - type: collectd/systemd
+      services:
+        - toto
+        - titi
+    …
+  ```
