smart-agent_systemd-services: systemd_services → aliveness (+ aggregation false→true)

--- a/modules/smart-agent_systemd-services/conf/01-systemd_services.yaml
+++ b/modules/smart-agent_systemd-services/conf/01-systemd_services.yaml
@@ -1,10 +1,8 @@
-## Example
 module: systemd-services
-name: "aliveness"
-id: systemd_services
+name: aliveness
 
 transformation: true
-aggregation: false
+aggregation: true
 
 signals:
   signal:
