--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -49,6 +49,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Generate modules doc
       run: make update-module-doc
@@ -66,6 +68,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Generate severity doc
       run: make update-severity-doc
