git fetch all to prevent errors to get tag from makefile

--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -36,6 +36,8 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
