--- a/modules/integration_aws-elasticache-redis/conf/01-hit-ratio.yaml
+++ b/modules/integration_aws-elasticache-redis/conf/01-hit-ratio.yaml
@@ -13,7 +13,7 @@ signals:
   misses:
     metric: CacheMisses
   signal:
-    formula: (hits/(hits+misses).fill(value=1).scale(100)
+    formula: (hits/(hits+misses)).fill(value=1).scale(100)
 
 rules:
   critical:
