improve original detectors config after conversion to generator

--- a/modules/integration_aws-alb/conf/00-heartbeat.yaml
+++ b/modules/integration_aws-alb/conf/00-heartbeat.yaml
@@ -2,7 +2,7 @@ module: AWS ALB
 name: heartbeat
 
 transformation: false
-aggregation: true
+aggregation: ".mean(by=['LoadBalancer'])"
 filtering: "filter('namespace', 'AWS/ApplicationELB')"
 
 signals:
