--- a/modules/smart-agent_rabbitmq-queue/conf/02-messages-unacknowledged.yaml
+++ b/modules/smart-agent_rabbitmq-queue/conf/02-messages-unacknowledged.yaml
@@ -1,7 +1,7 @@
 module: RabbitMQ Queue
 name: messages unacknowledged
 
-transformation: ".min(over='20m')"
+transformation: true
 aggregation: true
 filtering: "filter('plugin', 'rabbitmq')"
 disabled: true
@@ -14,7 +14,9 @@ rules:
   critical:
     threshold: 15000
     comparator: ">"
+    lasting_duration: 20m
   major:
     threshold: 10000
     comparator: ">"
+    lasting_duration: 20m
     dependency: critical
