--- a/modules/smart-agent_rabbitmq-queue/conf/03-messages-ack-rate.yaml
+++ b/modules/smart-agent_rabbitmq-queue/conf/03-messages-ack-rate.yaml
@@ -1,7 +1,7 @@
 module: RabbitMQ Queue
 name: messages ack rate
 
-transformation: ".min(over='20m')"
+transformation: true
 aggregation: true
 filtering: "filter('plugin', 'rabbitmq')"
 disabled: true
