--- a/modules/integration_aws-elasticache-redis/conf/01-hit-ratio.yaml
+++ b/modules/integration_aws-elasticache-redis/conf/01-hit-ratio.yaml
@@ -10,20 +10,24 @@ value_unit: "%"
 signals:
   hits:
     metric: CacheHits
+    extrapolation: zero
+    rollup: sum
   misses:
     metric: CacheMisses
+    extrapolation: zero
+    rollup: sum
   signal:
     formula: (hits/(hits+misses)).fill(value=1).scale(100)
 
 rules:
-  critical:
+  major:
     threshold: 60
     comparator: "<"
     lasting_duration: 5m
     lasting_at_least: 0.9
-  major:
+  minor:
     threshold: 80
     comparator: "<"
-    dependency: critical
+    dependency: major
     lasting_duration: 5m
     lasting_at_least: 0.9
