--- a/modules/smart-agent_nginx-ingress/conf/03-lb-4xx.yaml
+++ b/modules/smart-agent_nginx-ingress/conf/03-lb-4xx.yaml
@@ -3,7 +3,7 @@ name: 4xx errors ratio
 id: http_4xx
 
 transformation: true
-aggregation: true
+aggregation: ".sum(by=['controller_namespace', 'controller_class', 'ingress'])"
 value_unit: "%"
 
 signals:
