--- a/modules/smart-agent_rabbitmq-queue/conf/04-consumer-use.yaml
+++ b/modules/smart-agent_rabbitmq-queue/conf/04-consumer-use.yaml
@@ -1,7 +1,7 @@
 module: RabbitMQ Queue
 name: consumer use
 
-transformation: ".min(over='20m')"
+transformation: true
 aggregation: true
 filtering: "filter('plugin', 'rabbitmq')"
 disabled: true
