--- a/modules/smart-agent_cassandra/conf/04-write-latency-real-time.yaml
+++ b/modules/smart-agent_cassandra/conf/04-write-latency-real-time.yaml
@@ -1,7 +1,7 @@
 module: cassandra
 name: write latency real time
 
-transformation: ".min(over='15m')"
+transformation: true
 aggregation: true
 value_unit: s
 
@@ -16,7 +16,9 @@ rules:
   critical:
     threshold: 1
     comparator: '>'
+    lasting_duration: 15m
   major:
     threshold: 0.5
     comparator: '>'
+    lasting_duration: 15m
     dependency: critical
