--- a/modules/smart-agent_cassandra/conf/07-transactional-read-latency-real-time.yaml
+++ b/modules/smart-agent_cassandra/conf/07-transactional-read-latency-real-time.yaml
@@ -1,7 +1,7 @@
 module: cassandra
 name: transactional read latency real time
 
-transformation: ".min(over='15m')"
+transformation: true
 aggregation: true
 value_unit: s
 
@@ -16,7 +16,9 @@ rules:
   critical:
     threshold: 2
     comparator: '>'
+    lasting_duration: 15m
   major:
     threshold: 1
     comparator: '>'
+    lasting_duration: 15m
     dependency: critical
