--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         concurrent_skipping: 'same_content'
         do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
-        paths: '["modules/**.tf", "modules/**/conf/detector-*.yaml", "scripts/**", "Makefile", ".github/workflows/main.yml"]'
+        paths: '["scripts/**", "Makefile", ".github/workflows/generator.yml"]'
 
   test:
     needs: pre_job
