Change severity threshold and add lasting_duration

--- a/modules/integration_azure-express-route/conf/01-bgp.yaml
+++ b/modules/integration_azure-express-route/conf/01-bgp.yaml
@@ -11,10 +11,17 @@ signals:
   signal:
     metric: "BgpAvailability"
 rules:
+  warning:
+    threshold: 100
+    comparator: "<"
+    lasting_duration: '2m'
   critical:
     threshold: 99
     comparator: "<"
+    lasting_duration: '2m'
+    dependency: warning
   major:
     threshold: 95
     comparator: "<"
+    lasting_duration: '2m'
     dependency: critical
